# Infinity_AudioBook

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  settings.example.ini  story.md
assets/: speaker_reference.txt
docs/: index.md  log.md
docs/architecture/: constraints.md  implementation-phases.md  index.md  pipeline.md  project-structure.md  tech-stack.md
docs/configuration/: index.md  playback.md  story-state.md
docs/modules/: entry-point.md  index.md  llm-clients.md  player.md  story-state-module.md  tts.md
docs/playbooks/: authentication.md  debugging-llm.md  index.md
infinity_audiobook/: __init__.py  __main__.py  audio_producer.py  context.py  env.py  gemini_client.py  gemini_errors.py  gemini_tiered.py  llm_config.py  llm_debug.py  llm_prompts.py  main.py  models.py  playback_config.py  player.py  reference_sources.py  settings.py  settings_paths.py  story_arc.py  story_compact.py  story_config.py  story_state.py  text_producer.py  tts.py  tts_chunks.py
knowledge/: index.md
sources/: README.md
tests/: conftest.py  test_env.py  test_gemini_client.py  test_gemini_errors.py  test_gemini_tiered.py  test_llm_config.py  test_llm_debug.py  test_llm_prompts.py  test_main.py  test_pipeline.py  test_playback_config.py  test_player.py  test_reference_sources.py  test_settings.py  test_story_arc.py  test_story_compact.py  test_story_config.py  test_story_language.py  test_story_language_cache.py  test_story_state.py  test_text_producer_fallback.py  test_text_producer_gemini.py  test_tts.py  test_tts_chunks.py  test_ui.py
(+37 files in other folders)
