[project]
name = "infinity-audiobook"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "sounddevice",
  "soundfile",
  "torch>=2.4",
  "torchaudio>=2.4",
  "omnivoice==0.1.5",
  "pytest",
  "google-genai>=2.10.0",
  "python-dotenv>=1.2.2",
  "textual>=8.2.8",
]

[project.scripts]
infinity-audiobook = "infinity_audiobook.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["infinity_audiobook"]

[tool.uv.sources]
torch = [{ index = "pytorch-cuda", marker = "sys_platform == 'win32'" }]
torchaudio = [{ index = "pytorch-cuda", marker = "sys_platform == 'win32'" }]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
constraint-dependencies = [
  "torch==2.8.0",
  "torchaudio==2.8.0",
  "librosa>=0.10.0",
  "numba>=0.60.0",
  "llvmlite>=0.43.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
